RESOLVED FIXED25391
G_SIGNAL_ACTION flag in WebKitWebView signals
https://bugs.webkit.org/show_bug.cgi?id=25391
Summary G_SIGNAL_ACTION flag in WebKitWebView signals
Xan Lopez
Reported 2009-04-25 02:44:49 PDT
See attached patch for explanation.
Attachments
signalaction.patch (17.20 KB, patch)
2009-04-25 02:54 PDT, Xan Lopez
gustavo: review+
Xan Lopez
Comment 1 2009-04-25 02:54:21 PDT
Created attachment 29784 [details] signalaction.patch
Gustavo Noronha (kov)
Comment 2 2009-04-26 10:17:02 PDT
Comment on attachment 29784 [details] signalaction.patch Right, I was in doubt about the inspector ones, but after some code reading, I agree. I also don't think this is a breakage in the interface, since emitting those signals already gained nothing anyway.
Xan Lopez
Comment 3 2009-04-26 10:23:37 PDT
Landed as r42879.
Note You need to log in before you can comment on or make changes to this bug.